--- a/JudoKit_iOS.xcodeproj/xcshareddata/xcschemes/JudoKit_iOS.xcscheme
+++ b/JudoKit_iOS.xcodeproj/xcshareddata/xcschemes/JudoKit_iOS.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3B678B551C6CE5190001DC2F"
                BuildableName = "JudoKit-iOS.framework"
-               BlueprintName = "JudoKit-iOS"
-               ReferencedContainer = "container:JudoKit-iOS.xcodeproj">
+               BlueprintName = "JudoKit_iOS"
+               ReferencedContainer = "container:JudoKit_iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,8 +33,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B678B551C6CE5190001DC2F"
             BuildableName = "JudoKit-iOS.framework"
-            BlueprintName = "JudoKit-iOS"
-            ReferencedContainer = "container:JudoKit-iOS.xcodeproj">
+            BlueprintName = "JudoKit_iOS"
+            ReferencedContainer = "container:JudoKit_iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <Testables>
@@ -44,8 +44,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4416C39C2451A4060002870C"
                BuildableName = "JudoKit-iOSTests.xctest"
-               BlueprintName = "JudoKit-iOSTests"
-               ReferencedContainer = "container:JudoKit-iOS.xcodeproj">
+               BlueprintName = "JudoKit_iOSTests"
+               ReferencedContainer = "container:JudoKit_iOS.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -66,8 +66,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B678B551C6CE5190001DC2F"
             BuildableName = "JudoKit-iOS.framework"
-            BlueprintName = "JudoKit-iOS"
-            ReferencedContainer = "container:JudoKit-iOS.xcodeproj">
+            BlueprintName = "JudoKit_iOS"
+            ReferencedContainer = "container:JudoKit_iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </LaunchAction>
@@ -82,8 +82,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B678B551C6CE5190001DC2F"
             BuildableName = "JudoKit-iOS.framework"
-            BlueprintName = "JudoKit-iOS"
-            ReferencedContainer = "container:JudoKit-iOS.xcodeproj">
+            BlueprintName = "JudoKit_iOS"
+            ReferencedContainer = "container:JudoKit_iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
